# csv-inspector-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml
app/: config.py  main.py
app/api/: errors.py  files.py
app/models/: responses.py
app/services/: csv_analyzer.py  csv_reader.py  file_storage.py
tests/: test_csv_analyzer.py  test_csv_reader.py  test_error_handlers.py  test_files_api.py  test_health.py
tests/samples/: sales.csv
